Modified docker-compose and readme instructions